--- a/index.html
+++ b/index.html
@@ -10,321 +10,42 @@
 </head>
 <body>
   <div class="page-wrap">
-    <header>
-      <h1 class="logo" aria-label="young e">Y0U&G.E</h1>
-      <nav class="h-nav" id="h-nav">
-        <h1 class="sr-only">네비게이션</h1>
-        <ul>
-          <li><button type="button" id="cont-btn" class="cont-btn">CONTACT</button></li>
-          <li><button type="button" id="pf-btn" class="pf-btn click">PORTFOLIO</button></li>
-          <li><button type="button" id="pj-btn" class="pj-btn">PROJECT</button></li>
-          <li><button type="button" id="tpj-btn" class="pj-btn">TOY PROJECT</button></li>
-          <li><button type="button" id="mw-btn" class="mw-btn">MINI WORK</button></li>
-        </ul>
+    <header style="outline: 1px solid green;">
+      <h1 class="pw-logo">y0u&g.e</h1>
+      <nav class="h-nav">
+        <button type="button">TECHNIQUE</button>
+        <button type="button">PROJECT</button>
+        <button type="button">TOY-PROJECT</button>
       </nav>
+      <address class="contact">
+        <a href="https://github.com/gay0ung" target="_blank"><i class="fab fa-github"></i>github</a>
+        <a href="mailto:6and_end9@naver.com"><i class="far fa-envelope"></i>email address</a>
+        <a href="tel:01092438180"><i class="fas fa-mobile-alt"></i>phone number</a>
 
-      <div class="contents-detail">
-        <h2>detail</h2>
-        <ul class="pr-detail click">
-          <li class="show">
-            <h3>kakao page</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-          <li>
-            <h3>jenniferSoft</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-          <li>
-            <h3>microsoft</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-          <li>
-            <h3>korea life insurance association</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-        </ul>
-        <ul class="pj-detail">
-          <li>
-            <h3>korea life insurance association</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-        </ul>
-        <ul class="mw-detail">
-          <li>
-            <h3>jenniferSoft</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-          <li>
-            <h3>microsoft</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-          <li>
-            <h3>korea life insurance association</h3>
-            <div>
-              <strong>skils</strong>
-              <p>내용</p>
-            </div>
-            <div>
-              <strong>설명</strong>
-              <p>내용</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <footer>
-        <p class="">ⓒ L E E . G A . Y O U N G</p>
-      </footer>
+      </address>
     </header>
-    <main>
-      <header>
-        <div class="m-header">
-          <ul>
-            <li class="cont m-on">CONTACT</li>
-            <li class="pf">PORTFOLIO</li>
-            <li class="pj">PROJECT</li>
-            <li class="mw">MINI WORK</li>
-          </ul>
-        </div>
-      </header>
-      <div class="sections-container">
-        <!-- contact -->
-        <section class="s-contact s-on" >
-          <h2 class="sr-only">contact</h2>
-          <h1 class="center">LEE GA YOUNG</h1>
-          <div class="profile center">
-            <div class="p-image"></div>
-            <address>
-              <a href="https://github.com/gay0ung" target="_blank">
-                < class="fab fa-github"></i> 
-                GITHUB
-              </a>
-
-              <a href="tel:01092438180" class="p-number" aria-label="phone number">
-                <i class="fas fa-phone"></i>
-                010-9243-8180
-              </a>
-
-              <a href="mailto:6and_end9@naver.com" aria-label="mail address">
-                <i class="fas fa-envelope"></i>
-                6and_end9@naver.com
-              </a>
-            </address>
-          </div>
-        </section>
-        <!-- portfolio -->
-        <section class="s-portfolio  ">
-          <h1 class="sr-only">about portfolio</h1>
+    <main style="outline: 1px solid orange;">
+      <div class="main-inr">
+        <section class="technique">
+          <h3>TECHNIQUE</h3>
           <ul>
             <li>
-              <a href="./kakao/index.html" target="_blank">
-                <span class="sr-only" lang="ko">카카오 페이지</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="./kakao/index.html" target="_blank">
-                <span class="sr-only" lang="ko">제니퍼 소프트 페이지</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="./kakao/index.html" target="_blank">
-                <span class="sr-only" lang="ko">마이크로 소프트 페이지</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="./kakao/index.html" target="_blank">
-                <span class="sr-only" lang="ko">생명보험협회 페이지</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
+              <h4>Vue.js</h4>
+              <i>https://vuejs.org/images/logo.png</i>
             </li>
           </ul>
         </section>
-        <!-- project -->
-        <section class="s-project">
-          <h1 class="sr-only">about project</h1>
+        <section class="project">
+          <h3>PROJECT</h3>
           <ul>
-            <li>
-              <a href="./kakao/index.html" target="_blank" class="result-img">
-                결과 이미지
-                <span class="sr-only" lang="ko">머니부 페이지</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-          </ul>
-        </section>
-
-        <!-- toy project -->
-        <section class="s-toy-project">
-          <h1 class="sr-only">about mini-work</h1>
-          <ul>
-            <!-- vanilla javascript -->
-            <li>
-              <a href="./mini works/javascript/paint-JS/index.html" target="_blank">
-                <span class="sr-only">painting page</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="./mini works/javascript/Vanilla-JS/index.html" target="_blank">
-                <span class="sr-only">user page(googel)</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-        
-            <!-- vue.js -->
-            <li>
-              <a href="#" target="_blank">
-                <span class="sr-only">search movie</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-                <span class="sr-only">hacker news</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-                <span class="sr-only">weather page</span>
-                <ul class="result-images">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-          </ul>
-        </section>
-        <!-- mini-work -->
-        <section class="s-mini-work">
-          <h1 class="sr-only">about mini-work</h1>
-          <ul>
-            <!-- vanilla javascript -->
-            <li>
-              <a href="./mini works/javascript/paint-JS/index.html" target="_blank" class="result-img">
-                  <span class="sr-only">painting page</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="./mini works/javascript/Vanilla-JS/index.html" target="_blank" class="result-img">
-                  <span class="sr-only">user page(googel)</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-
-            <!-- vue.js -->
-            <li>
-              <a href="#" target="_blank" class="result-img">
-                  <span class="sr-only">search movie</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="#" target="_blank" class="result-img">
-                <span class="sr-only">hacker news</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
-            <li>
-              <a href="#" target="_blank" class="result-img">
-                <span class="sr-only">weather page</span>
-              </a>
-              <button type="button" class="detail">detail</button>
-            </li>
+            <li></li>
           </ul>
         </section>
       </div>
     </main>
+    <!-- <footer style="outline: 1px solid blueviolet;">
+      <div class="footer-inr"></div>
+    </footer> -->
   </div>
 </body> 
 </html>
